--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/component/index",
     "pages/component/category/category",
+    "pages/component/address/address",
     "pages/component/cart/cart",
     "pages/component/user/user",
     "pages/component/address/address",
@@ -10,21 +11,22 @@
     "pages/component/list/list",
     "pages/component/order_confirm/order_confirm",
     "pages/component/pay/pay",
+    "pages/component/order_detail/order_detail",
     "pages/component/profile/profile",
     "pages/component/login/login"
   ],
   "window": {
     "navigationBarTextStyle": "#ffffff",
     "navigationBarTitleText": "零食汇商城",
-    "navigationBarBackgroundColor": "#AB956D",
+    "navigationBarBackgroundColor": "#c71f3b",
     "backgroundColor": "#eeeeee",
     "enablePullDownRefresh": true
   },
   "tabBar": {
-    "color": "#b7b7b7",
-    "selectedColor": "#AB956D",
-    "borderStyle": "#f5f5f5",
-    "backgroundColor": "#f5f5f5",
+    "color": "#aaa",
+    "selectedColor": "#c71f3b",
+    "borderStyle": "#959595",
+    "backgroundColor": "#fff",
     "list": [
       {
         "pagePath": "pages/component/index",
