--- a/app.json
+++ b/app.json
@@ -16,15 +16,15 @@
   "window": {
     "navigationBarTextStyle": "#ffffff",
     "navigationBarTitleText": "零食汇商城",
-    "navigationBarBackgroundColor": "#c71f3b",
+    "navigationBarBackgroundColor": "#707070",
     "backgroundColor": "#eeeeee",
     "enablePullDownRefresh": true
   },
   "tabBar": {
     "color": "#b7b7b7",
     "selectedColor": "#c71f3b",
-    "borderStyle": "#f5f5f5",
-    "backgroundColor": "#f5f5f5",
+    "borderStyle": "#e9e9e9",
+    "backgroundColor": "#fff",
     "list": [
       {
         "pagePath": "pages/component/index",
