--- a/app.json
+++ b/app.json
@@ -6,6 +6,9 @@
     "pages/component/user/user",
     "pages/component/user_new/user_new",
     "pages/component/address/address",
+    "pages/component/address-edit/address-edit",
+    "pages/component/address-list/address-list",
+    "pages/component/address-confirm/address-confirm",
     "pages/component/order-list/order-list",
     "pages/component/order_detail/order_detail",
     "pages/component/details/details",
